--- a/about.html
+++ b/about.html
@@ -374,7 +374,7 @@ width:650px;
         <div class="nav-left"><img src="logo.png" alt="img"></div>
         <div class="nav-mid">
           <ul>
-           <li class="active"><a href="index2.html">Home</a></li>
+           <li class="active"><a href="index.html">Home</a></li>
            <li><a href=""><div class="dropdown">Menu
               <div id="myDropdown" class="dropdown-content">
               <a href="breakfast&brunch.html">Breakfast</a>
