--- a/cart.html
+++ b/cart.html
@@ -458,7 +458,7 @@ height:20px;
         <div class="nav-mid">
           <ul>
             
-           <li><a href="index2.html">Home</a></li>
+           <li><a href="index.html">Home</a></li>
            <li><a href="#second-section"><div class="dropdown">Menu
   
             <div id="myDropdown" class="dropdown-content">
